# advent-of-code-2025-rust

./: Cargo.toml
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs  year2024.rs  year2025.rs
aoc-lib/src/utils/: input.rs
aoc-lib/src/year2024/: day02.rs
aoc-lib/src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
aoc/src/: main.rs
benches/benches/: all_days.rs
